anvil-tera-derive/tests/compile_fail/incorrect_format.stderr
error: Expected #[template(...)] attribute list format, e.g., #[template(path = "...")]
 --> tests/compile_fail/incorrect_format.rs
  |
  | #[template = "test.txt"]  // Using incorrect format
  | ^^^^^^^^^^^^^^^^^^^^^^^^
